--- a/sun/game-data/loads/1/player.yml
+++ b/sun/game-data/loads/1/player.yml
@@ -2,30 +2,37 @@
 player:
   step_size: 1
   position:
-  - 121
-  - 177
-  direction: 56
+  - 203
+  - 142
+  direction: 290.0
   turn_speed: 8
   movement_distance: 5
   menu_action_delay: 12
-  enemies_killed: 14
+  enemies_killed: 31
   image_path: game-data/sprites/anima_gold_avatar_smaller.png
   collision_priority: 4
   base_accuracy: 100
   animation_width: 32
   animation_height: 16
-  image_file: 
+  image_file: !!null 
   animation_path: game-data/sprites/anima_gold_avatar_smaller.png
   main_animation_name: main_player_anim
   animation_name: main_player_anim
   footsteps_effect_name: footsteps
-  damage_sound_effect_name: 
+  damage_sound_effect_name: !!null 
   max_energy_points: 1000
   energy_points: 1000
+  radius: 64.0
   stats:
     strength: 10
     defense: 5
-    health: 996
+    health: 1000
     max_health: 1000
     speed: 5
     accuracy: 250
+  progression:
+    upgrade_points: 31
+    level_background_rank: 0
+    levels_completed:
+    - h_level_intro_a
+    - h_level_intro
