--- a/sun/game-data/loads/1/player.yml
+++ b/sun/game-data/loads/1/player.yml
@@ -2,24 +2,24 @@
 player:
   step_size: 1
   position:
-  - 203
-  - 142
-  direction: 290.0
+  - 212
+  - 173
+  direction: 334.0
   turn_speed: 8
   movement_distance: 5
   menu_action_delay: 12
-  enemies_killed: 31
+  enemies_killed: 32
   image_path: game-data/sprites/anima_gold_avatar_smaller.png
   collision_priority: 4
   base_accuracy: 100
   animation_width: 32
   animation_height: 16
-  image_file: !!null 
+  image_file: 
   animation_path: game-data/sprites/anima_gold_avatar_smaller.png
   main_animation_name: main_player_anim
   animation_name: main_player_anim
   footsteps_effect_name: footsteps
-  damage_sound_effect_name: !!null 
+  damage_sound_effect_name: 
   max_energy_points: 1000
   energy_points: 1000
   radius: 64.0
@@ -31,7 +31,7 @@ player:
     speed: 5
     accuracy: 250
   progression:
-    upgrade_points: 31
+    upgrade_points: 32
     level_background_rank: 0
     levels_completed:
     - h_level_intro_a
