--- a/sun/game-data/loads/2/player.yml
+++ b/sun/game-data/loads/2/player.yml
@@ -2,24 +2,24 @@
 player:
   step_size: 1
   position:
-  - 235
-  - 164
-  direction: 316.25
+  - 156
+  - 154
+  direction: 7.5
   turn_speed: 5
   movement_distance: 5
   menu_action_delay: 2
-  enemies_killed: 5
+  enemies_killed: 2
   image_path: game-data/sprites/player_white_circle.png
   collision_priority: 4
   base_accuracy: 100
   animation_width: 30
   animation_height: 30
-  image_file: !!null 
+  image_file: 
   animation_path: game-data/sprites/player_white_circle.png
   main_animation_name: main_player_anim
   animation_name: main_player_anim
   footsteps_effect_name: footsteps
-  damage_sound_effect_name: !!null 
+  damage_sound_effect_name: 
   max_energy_points: 1000
   energy_points: 1000
   radius: 15.0
@@ -31,7 +31,7 @@ player:
     speed: 5
     accuracy: 250
   progression:
-    upgrade_points: 5
+    upgrade_points: 2
     level_background_rank: 0
     levels_completed:
     - h_level_1
