--- a/sun/game-data/loads/4/player.yml
+++ b/sun/game-data/loads/4/player.yml
@@ -2,27 +2,38 @@
 player:
   step_size: 1
   position:
-  - 191.53210961869289
-  - 155.38606988579946
-  direction: 340
+  - 248
+  - 160
+  direction: 307.5
   turn_speed: 5
-  movement_distance: 2
-  menu_action_delay: 12
-  enemies_killed: 14
-  image_path: game-data/sprites/anima_gold_avatar_smaller.png
+  movement_distance: 5
+  menu_action_delay: 2
+  enemies_killed: 6
+  image_path: game-data/sprites/player_grey_scale_circle.png
   collision_priority: 4
   base_accuracy: 100
-  animation_width: 32
-  animation_height: 16
-  image_file: !!null 
-  animation_path: game-data/sprites/anima_gold_avatar_smaller.png
+  animation_width: 30
+  animation_height: 30
+  image_file: game-data/sprites/player_grey_scale_circle.png
+  animation_path: game-data/sprites/player_white_circle.png
   main_animation_name: main_player_anim
   animation_name: main_player_anim
   footsteps_effect_name: footsteps
+  damage_sound_effect_name: 
+  max_energy_points: 1000
+  energy_points: 1000
+  radius: 15.0
   stats:
     strength: 10
     defense: 5
-    health: 939
-    max_health: 1000
+    health: 46
+    max_health: 100
     speed: 5
-    accuracy: 5
+    accuracy: 250
+  progression:
+    upgrade_points: 6
+    level_background_rank: 0
+    levels_completed:
+    - h_level_1
+    - h_level_2
+    - h_level_3
