--- a/sun/game-data/loads/4/savedata.yml
+++ b/sun/game-data/loads/4/savedata.yml
@@ -1,5 +1,7 @@
 ---
 savedata:
-  level: game-data/levels/h_level_intro_interception/h_level_intro_interception.yml
-  player: game-data/loads/4/player.yml
-  player_inventory: game-data/loads/4/inventory.yml
+  level: game-data/levels/h_level_3_reward/h_level_3_reward.yml
+  player: !binary |-
+    Z2FtZS1kYXRhL2xvYWRzLzQvcGxheWVyLnltbA==
+  player_inventory: !binary |-
+    Z2FtZS1kYXRhL2xvYWRzLzQvaW52ZW50b3J5LnltbA==
