--- a/sun/game-data/new_game_load_screen.yml
+++ b/sun/game-data/new_game_load_screen.yml
@@ -21,3 +21,4 @@ game:
   game_over_level: "game-data/levels/game_over/game_over.yml"
   player_bullet: "game-data/equipment/bullet.png"
   player_reset: "game-data/players/player.yml"
+  inventory: "game-data/inventory_list/inventory_list.yml"
