--- a/sun/game-data/levels/h_level_1_reward/h_level_1_reward.yml
+++ b/sun/game-data/levels/h_level_1_reward/h_level_1_reward.yml
@@ -29,10 +29,11 @@ line_segments:
 event_areas:
   - top_left: [ 132, 421 ]
     bottom_right: [ 272, 467 ]
-    action: noop
+    action: upgrade_player
+    action_argument: "game-data/sprites/player_grey_scale_circle.png"
     info_window:
       description:
-        - Pick up weapon.
+        - Avatar upgrade.
       position: [ 103, 355 ]
       size: [ 195, 398 ]
 
