lvl 1 reward now gives avatar upgrade. Lvl 2 reward gives and equips silver sword. lvl 3 reward is noop waiting on armor reward to be wired.

--- a/sun/game-data/levels/h_level_2_reward/h_level_2_reward.yml
+++ b/sun/game-data/levels/h_level_2_reward/h_level_2_reward.yml
@@ -27,11 +27,11 @@ line_segments:
 event_areas:
   - top_left: [ 132, 421 ]
     bottom_right: [ 272, 467 ]
-    action: upgrade_player
-    action_argument: "game-data/sprites/player_grey_scale_circle.png"
+    action: equip_item
+    action_argument: "game-data/equipment/weapon/silver_sword.yml"
     info_window:
       description:
-        - Avatar upgrade.
+        - New Weapon.
       position: [ 103, 355 ]
       size: [ 195, 398 ]
 
