--- a/sun/game-data/levels/h_level_2_reward/h_level_2_reward.yml
+++ b/sun/game-data/levels/h_level_2_reward/h_level_2_reward.yml
@@ -1,6 +1,6 @@
 name: h_level_2_reward
 background_image: game-data/levels/h_level_2_reward/h_level_2_reward.png
-background_music: game-data/music/crappypiano.wav
+background_music: game-data/music/silence.wav
 heads_up_display: game-data/hud/hud_temp_msg_only.yml
 player_start_position: [ 400, 300 ]
 player_start_health: 100
