--- a/sun/game-data/levels/h_level_3_reward/h_level_3_reward.yml
+++ b/sun/game-data/levels/h_level_3_reward/h_level_3_reward.yml
@@ -1,6 +1,6 @@
 name: h_level_3_reward
 background_image: game-data/levels/h_level_3_reward/h_level_3_reward.png
-background_music: game-data/music/crappypiano.wav
+background_music: game-data/music/silence.wav
 heads_up_display: game-data/hud/hud_config_empty.yml
 player_start_position: [ 400, 300 ]
 
