--- a/sun/game-data/levels/the_terminal_hub/the_terminal_hub.yml
+++ b/sun/game-data/levels/the_terminal_hub/the_terminal_hub.yml
@@ -40,23 +40,6 @@ event_areas:
       position: [ 498, 355 ]
       size: [ 195, 398 ]
 
-  - top_left: [ 70, 152 ]
-    bottom_right: [ 120, 198 ]
-    conditions:
-      - condition_name: is_level_complete
-        condition_argument: h_level_2
-    action: LOAD_LEVEL
-    action_argument: "game-data/levels/terminal_hack_1/terminal_hack_1.yml"
-    one_time: false
-    image_file: game-data/icons/h_red_icon.png
-    extra_actions:
-      - action: noop
-    info_window:
-      description:
-        - Go to next level.
-      position: [ 498, 355 ]
-      size: [ 195, 398 ]
-
   - top_left: [ 70, 450 ]
     bottom_right: [ 280, 540 ]
     action: BACK_TO_LEVEL
@@ -67,5 +50,19 @@ event_areas:
     info_window:
       description:
         - Go back one screen.
-      position: [ 498, 355 ]
-      size: [ 195, 398 ]
+      position: [ 70, 400 ]
+      size: [ 195, 450 ]
+
+  - top_left: [ 500, 450 ]
+    bottom_right: [ 710, 540 ]
+    action: LOAD_LEVEL
+    action_argument: "game-data/levels/map/map.yml"
+    one_time: false
+    image_file: game-data/icons/grey_cancel_button.png
+    extra_actions:
+      - action: noop
+    info_window:
+      description:
+        - Go back one screen.
+      position: [ 500, 400 ]
+      size: [ 195, 450 ]
