--- a/sun/game-data/levels/the_fields_hub/the_fields_hub.yml
+++ b/sun/game-data/levels/the_fields_hub/the_fields_hub.yml
@@ -59,3 +59,30 @@ event_areas:
         - Go to next level.
       position: [ 498, 355 ]
       size: [ 195, 398 ]
+
+  - top_left: [ 70, 450 ]
+    bottom_right: [ 280, 540 ]
+    action: BACK_TO_LEVEL
+    one_time: false
+    image_file: game-data/icons/grey_cancel_button.png
+    extra_actions:
+      - action: noop
+    info_window:
+      description:
+        - Go back one screen.
+      position: [ 70, 400 ]
+      size: [ 195, 450 ]
+
+  - top_left: [ 500, 450 ]
+    bottom_right: [ 710, 540 ]
+    action: LOAD_LEVEL
+    action_argument: "game-data/levels/map/map.yml"
+    one_time: false
+    image_file: game-data/icons/grey_map_button.png
+    extra_actions:
+      - action: noop
+    info_window:
+      description:
+        - Go back one screen.
+      position: [ 500, 400 ]
+      size: [ 195, 450 ]
