edit info for Map button.

--- a/sun/game-data/levels/the_fields_hub/the_fields_hub.yml
+++ b/sun/game-data/levels/the_fields_hub/the_fields_hub.yml
@@ -83,6 +83,6 @@ event_areas:
       - action: noop
     info_window:
       description:
-        - Go back one screen.
+        - Go back to map.
       position: [ 500, 400 ]
       size: [ 195, 450 ]
