--- a/sun/game-data/levels/h_level_3_reward/h_level_3_reward.yml
+++ b/sun/game-data/levels/h_level_3_reward/h_level_3_reward.yml
@@ -26,7 +26,8 @@ line_segments:
 event_areas:
   - top_left: [ 132, 421 ]
     bottom_right: [ 272, 467 ]
-    action: noop #equip_item  action_argument: "game-data/equipment/weapon/silver_sword.yml"
+    action: equip_item
+    action_argument: "game-data/equipment/gun.yml"
     info_window:
       description:
         - New Armor.
