trying to sort out equipping menu.

--- a/sun/game-data/levels/h_level_3_reward/h_level_3_reward.yml
+++ b/sun/game-data/levels/h_level_3_reward/h_level_3_reward.yml
@@ -30,7 +30,7 @@ event_areas:
     action_argument: "game-data/equipment/gun.yml"
     info_window:
       description:
-        - New Armor.
+        - New Weapon (GUN).
       position: [ 103, 355 ]
       size: [ 195, 398 ]
 
