--- a/sun/game-data/loads/1/player.yml
+++ b/sun/game-data/loads/1/player.yml
@@ -2,13 +2,13 @@
 player:
   step_size: 1
   position:
-  - 167
-  - 143
-  direction: 1.25
+  - 205
+  - 159
+  direction: 330.0
   turn_speed: 5
   movement_distance: 5
   menu_action_delay: 2
-  enemies_killed: 2
+  enemies_killed: 4
   image_path: game-data/sprites/player_grey_scale_circle.png
   collision_priority: 4
   base_accuracy: 100
@@ -31,8 +31,10 @@ player:
     speed: 5
     accuracy: 250
   progression:
-    upgrade_points: 2
+    upgrade_points: 4
     level_background_rank: 0
     levels_completed:
+    - hack puzzle
+    - h_level_1
     - hack puzzle
     - h_level_1
