--- a/sun/game-data/loads/2/player.yml
+++ b/sun/game-data/loads/2/player.yml
@@ -2,13 +2,13 @@
 player:
   step_size: 1
   position:
-  - 192
-  - 165
-  direction: 311.25
+  - 162
+  - 126
+  direction: 52.5
   turn_speed: 5
   movement_distance: 5
   menu_action_delay: 2
-  enemies_killed: 4
+  enemies_killed: 6
   image_path: game-data/sprites/player_grey_scale_circle.png
   collision_priority: 4
   base_accuracy: 100
@@ -31,9 +31,11 @@ player:
     speed: 5
     accuracy: 250
   progression:
-    upgrade_points: 4
+    upgrade_points: 6
     level_background_rank: 0
     levels_completed:
+    - hack puzzle
+    - h_level_1
     - hack puzzle
     - h_level_1
     - h_level_2
