added red sword and tried to give it to player and equip it in lvl 3 reward. However, experiencing issue still with equip menu

--- a/sun/game-data/levels/h_level_3_reward/h_level_3_reward.yml
+++ b/sun/game-data/levels/h_level_3_reward/h_level_3_reward.yml
@@ -27,7 +27,7 @@ event_areas:
   - top_left: [ 132, 421 ]
     bottom_right: [ 272, 467 ]
     action: equip_item
-    action_argument: "game-data/equipment/gun.yml"
+    action_argument: "game-data/equipment/weapon/red_sword.ym"
     info_window:
       description:
         - New Weapon (GUN).
