updated gun stats to proper yml and edited the speed and str to kill small mobs in 1 hit.

--- a/sun/game-data/equipment/gun.yml
+++ b/sun/game-data/equipment/gun.yml
@@ -6,5 +6,7 @@ weapon:
   equipment_image_path: game-data/equipment/weapon_black2.png
   type: projectile
   sound_effect_name: shoot
-  velocity: 16
+  stats:
+    strength: 27
+    speed: 8
 
