working adding red sword as take_reward and use weapon menu to equip...not working.

--- a/sun/game-data/inventory_list/inventory_list.yml
+++ b/sun/game-data/inventory_list/inventory_list.yml
@@ -3,3 +3,4 @@ inventory: #see all_equip_plus_armor.yml
   weapons:
     - game-data/equipment/weapon/silver_sword.yml
     - game-data/equipment/gun.yml
+    - game-data/equipment/weapon/red_sword.yml
