--- a/sun/game-data/enemies/baby_horned_pig_anim.yml
+++ b/sun/game-data/enemies/baby_horned_pig_anim.yml
@@ -6,9 +6,10 @@ enemy:
   animation_rate: 1
   position: [ 100 , 100 ]
   base_direction: 90
-  velocity: 0.25
+
   stats:
     health: 27
     max_health: 27
     defense: 7
     strength: 20
+    speed: 5
