added inventory to baby horned pig and wire them to baby horn and white squares.

--- a/sun/game-data/enemies/white_square.yml
+++ b/sun/game-data/enemies/white_square.yml
@@ -24,3 +24,5 @@ enemy:
           - enemy_lost: wait
           - enemy_sighted: attack
           - enemy_in_range: attack
+  inventory_file: game-data/enemies/baby_piggy_inventory.yml
+
